objects/Costs_and_Expenses__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bonus_to_Customer__c</fullName>
        <label>Bonus to Customer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Report_Fees__c</fullName>
        <label>Credit Report Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deducted_from_Customer__c</fullName>
        <label>Deducted from Customer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expense_Type__c</fullName>
        <label>Expense Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Court Docs</fullName>
                </value>
                <value>
                    <fullName>Credit Report</fullName>
                </value>
                <value>
                    <fullName>Customer Attorney Fee</fullName>
                </value>
                <value>
                    <fullName>IPA Fee</fullName>
                </value>
                <value>
                    <fullName>Issuer Admin Fee</fullName>
                </value>
                <value>
                    <fullName>Lien Searches</fullName>
                </value>
                <value>
                    <fullName>Mailing Expense</fullName>
                </value>
                <value>
                    <fullName>Medical Underwriting</fullName>
                </value>
                <value>
                    <fullName>Notary</fullName>
                </value>
                <value>
                    <fullName>OC Fees</fullName>
                </value>
                <value>
                    <fullName>Payoff</fullName>
                </value>
                <value>
                    <fullName>UCC Filing</fullName>
                </value>
                <value>
                    <fullName>Waiving Fees</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gifts_Entertainment__c</fullName>
        <label>Gifts/Entertainment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IPA_Fee_paid_by_bofi__c</fullName>
        <label>IPA Fee (paid by bofi)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Issuer_Admin_Fee__c</fullName>
        <label>Issuer Admin Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lien_Judgment_Search_Fees__c</fullName>
        <label>Lien &amp; Judgment Search Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mailing_Expenses__c</fullName>
        <label>Mailing Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Misc_Fees__c</fullName>
        <label>Misc. Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notary_Fees__c</fullName>
        <label>Notary Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OC_and_Filing_Fees__c</fullName>
        <label>OC and Filing Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cost and Expenses</relationshipLabel>
        <relationshipName>Cost_and_Expenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payee__c</fullName>
        <label>Payee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UCC_1_Filing_Fee__c</fullName>
        <label>UCC-1 Filing Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Costs and Expense</label>
    <nameField>
        <displayFormat>C&amp;E-{0000}</displayFormat>
        <label>Costs and Expenses #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost and Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>